master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-master-ingress
  namespace: ai-project
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: ai-backend-ai-app-chart
            port:
              number: 8000
      - path: /openapi.json
        pathType: Prefix
        backend:
          service:
            name: ai-backend-ai-app-chart
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ai-frontend-ai-app-chart
            port:
              number: 3000
